fix images stretching on load

--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -3,6 +3,7 @@
 }
 .about img {
   border-top: 4px solid #ffd651;
+  object-fit: fill;
 }
 .background {
   position: absolute;
